# NiftyRec

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt
Matlab/nifty_rec/: CMakeLists.txt  _et_affine_mex.cpp  _et_backproject_mex.cpp  _et_convolve_mex.cpp  _et_fisher_grid_invprojection_mex.cpp  _et_fisher_grid_mex.cpp  _et_gradient_attenuation_mex.cpp  _et_histogram_weighted_mex.cpp  _et_irotate_mex.cpp  _et_isinstalled_mex.cpp  _et_joint_histogram_mex.cpp  _et_list_gpus_mex.cpp  _et_project_backproject_mex.cpp  _et_project_mex.cpp  _et_project_partial_mex.cpp  _et_reorder_activity_in.cpp  _et_reorder_activity_out.cpp  _et_reset_gpu_mex.cpp  _et_rotate_mex.cpp  _et_set_gpu_mex.cpp  _et_variance_centre_approx_mex.cpp  _tt_backproject_ray_mex.cpp  _tt_project_perspective_mex.cpp  _tt_project_ray_mex.cpp
Matlab/nifty_rec/doc/: CMakeLists.txt  (+2 more)
Matlab/nifty_reg/: CMakeLists.txt  _reg_control_points_from_affine_mex.cpp  _reg_gaussian_smooth_mex.cpp  _reg_gradient_NMI_nodes_mex.cpp  _reg_gradient_bending_energy_mex.cpp  _reg_gradient_jacobian_determinant_mex.cpp  _reg_gradient_voxel_to_nodes_mex.cpp  _reg_image_gradient_mex.cpp  _reg_resample_spline_mex.cpp  _reg_scale_amplitude_mex.cpp  _reg_ssd_gradient_mex.cpp
Matlab/nifty_seg/: CMakeLists.txt  _seg_erode.cpp  _seg_get_MRF_strength.cpp  _seg_get_biasfield.cpp  _seg_get_biasfield_parameters.cpp  _seg_get_image.cpp  _seg_get_loglikelihood.cpp  _seg_get_mask.cpp  _seg_get_mean_variance.cpp  _seg_get_priors.cpp  _seg_get_regularisation_covariance.cpp  _seg_get_segmentation.cpp  _seg_initialise.cpp  _seg_save_biasfield.cpp  _seg_save_mask.cpp  _seg_save_priors.cpp  _seg_save_segmentation.cpp  _seg_set_MRF_strength.cpp  _seg_set_biasfield_parameters.cpp  _seg_set_input_image.cpp  _seg_set_mask.cpp  _seg_set_mean.cpp  _seg_set_priors.cpp  _seg_set_regularisation_covariance.cpp  _seg_set_segmentation.cpp  _seg_set_variance.cpp  _seg_step.cpp  _seg_step_BiasField.cpp  _seg_step_Expectation.cpp  _seg_step_Gaussian.cpp  _seg_step_MRF.cpp  _seg_step_Maximization.cpp  _seg_step_PriorWeight.cpp  _seg_terminate.cpp
apps/command_line_tools/: CMakeLists.txt  niftyrec_version.h  niftyrec_version.in.h  rec_spect.cpp  rec_spect.h  rec_spect.in.xml
data/: CMakeLists.txt
documentation/Doxygen/: CMakeLists.txt  Doxyfile.in
emission-lib/: CMakeLists.txt  _et.cpp  _et.h  _et_accumulate.cpp  _et_accumulate.h  _et_array_interface.cpp  _et_array_interface.h  _et_clear_accumulator.cpp  _et_clear_accumulator.h  _et_common.cpp  _et_common.h  _et_convolve2D.cpp  _et_convolve2D.h  _et_convolveFFT2D.cpp  _et_convolveFFT2D.h  _et_convolveSeparable2D.cpp  _et_convolveSeparable2D.h  _et_joint_histogram.cpp  _et_joint_histogram.h  _et_line_backproject.cpp  _et_line_backproject.h  _et_line_backproject_attenuated.cpp  _et_line_backproject_attenuated.h  _et_line_integral.cpp  _et_line_integral.h  _et_line_integral_attenuated.cpp  _et_line_integral_attenuated.h  _niftyrec_memory.cpp  _niftyrec_memory.h  test_et_backproject.cpp  test_et_line_integral.cpp  test_et_project.cpp
emission-lib_gpu/: CMakeLists.txt  _et_accumulate_gpu.cu  _et_accumulate_gpu.h  _et_accumulate_gpu_kernels.cu  _et_attenuation_gradient_gpu.cu  _et_attenuation_gradient_gpu.h  _et_attenuation_gradient_gpu_kernels.cu  _et_clear_accumulator_gpu.cu  _et_clear_accumulator_gpu.h  _et_clear_accumulator_gpu_kernels.cu  _et_convolveFFT2D_gpu.cu  _et_convolveFFT2D_gpu.h  _et_convolveFFT2D_gpu_kernels.cu  _et_convolveSeparable2D_gpu.cu  _et_convolveSeparable2D_gpu.h  _et_convolveSeparable2D_gpu_kernels.cu  _et_joint_histogram_gpu.cu  _et_joint_histogram_gpu.h  _et_joint_histogram_gpu_kernels.cu  _et_line_backproject_attenuated_gpu.cu  _et_line_backproject_attenuated_gpu.h  _et_line_backproject_attenuated_gpu_kernels.cu  _et_line_backproject_gpu.cu  _et_line_backproject_gpu.h  _et_line_backproject_gpu_kernels.c  _et_line_integral_attenuated_gpu.cu  _et_line_integral_attenuated_gpu.h  _et_line_integral_attenuated_gpu_kernels.cu  _et_line_integral_gpu.cu  _et_line_integral_gpu.h  _et_line_integral_gpu_kernels.cu  _pet_line_backproject_compressed_gpu.cu  _pet_line_backproject_compressed_gpu.h  _pet_line_backproject_compressed_gpu_kernels.cu  _pet_line_integral_compressed_gpu.cu  _pet_line_integral_compressed_gpu.h  _pet_line_integral_compressed_gpu_kernels.cu
nifti/: CMakeLists.txt
reg-lib/: CMakeLists.txt  _reg.cpp  _reg.h  _reg_array_interface.cpp  _reg_array_interface.h  _reg_bspline.cpp  _reg_mutualinformation.cpp
reg-lib_gpu/: CMakeLists.txt  _reg_affineTransformation_gpu.cu  _reg_blockMatching_gpu.cu  _reg_blockMatching_gpu_kernels.cu  _reg_blocksize_gpu.h  _reg_bspline_gpu.cu  _reg_cudaCommon.cu  _reg_mutualinformation_gpu.cu  _reg_resampling_gpu.cu  _reg_resampling_gpu.h  _reg_tools_gpu.cu  _reg_tools_gpu_kernels.cu
seg-lib/: CMakeLists.txt  _seg_EM.cpp  _seg_EM.h  _seg_LabFusion.cpp  _seg_LoAd.cpp  _seg_Topo.cpp  _seg_array_interface.cpp  _seg_array_interface.h  _seg_common.h  _seg_matrix.h  _seg_tools.cpp  _seg_tools.h
tclap/: CMakeLists.txt
teem/Testing/: CMakeLists.txt  testDataPath.h.in
transmission-lib/: CMakeLists.txt  _tt.cpp  _tt.h  _tt_array_interface.cpp  _tt_array_interface.h  _tt_common.cpp  _tt_common.h  _tt_line_backproject_ray_cpu.cpp  _tt_line_backproject_ray_cpu.h  _tt_line_project_ray_cpu.cpp  _tt_line_project_ray_cpu.h
transmission-lib_gpu/: CMakeLists.txt  _tt_line_backproject_ray_gpu.cu  _tt_line_backproject_ray_gpu.h  _tt_line_backproject_ray_gpu_kernels.cu  _tt_line_project_ray_gpu.cu  _tt_line_project_ray_gpu.h  _tt_line_project_ray_gpu_kernels.cu
transmission-lib_gpu/obsolete/: _tt_perspective_gpu.cu  _tt_perspective_gpu.h  _tt_perspective_gpu_kernels.cu  tt_backproject_ray_gpu.cu  tt_backproject_ray_gpu.h  tt_backproject_ray_gpu_kernels.cu  tt_project_ray_gpu.cu  tt_project_ray_gpu.h  tt_project_ray_gpu_kernels.cu
volume_render/: CMakeLists.txt  colormap.py  render_example_1.py  render_example_2.py  volumeRender.cpp  volumeRender.h  volumeRender.py  volumeRenderProxy.py  volumeRenderTest.cpp  volumeRender_kernel.cu  volumeRender_kernel.h
(+697 files in other folders)
