
FILE(GLOB PETSORTEO_SINOGRAMS "*.S")
INSTALL(FILES ${PETSORTEO_SINOGRAMS} DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})

FILE(GLOB PETSORTEO_NORMALISATION "*.N")
INSTALL(FILES ${PETSORTEO_NORMALISATION} DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})

FILE(GLOB SIMIND_SIMULATIONS "*.a00")
INSTALL(FILES ${SIMIND_SIMULATIONS} DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})

FILE(GLOB NIFTI_FILES "*.nii")
INSTALL(FILES ${NIFTI_FILES} DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})





