
#  CMakeLists.txt
#  
#  NiftyRec
#  Stefano Pedemonte, Oct. 2012.
#  CMIC - Centre for Medical Image Computing 
#  UCL - University College London. 
#  Released under BSD licence, see LICENSE.txt 

#-----------------------------------------------------------------------------

SUBDIRS(doc)
SUBDIRS(m)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/mex)

INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIRS})

MACRO(MEXIFY TARGET)
    SET_TARGET_PROPERTIES(${TARGET} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
    IF(WIN32)
        IF(CMAKE_CL_64)
            #MESSAGE("Win 64")
            SET_TARGET_PROPERTIES(${TARGET} PROPERTIES SUFFIX .mexw64 LINK_FLAGS /export:mexFunction)
        ELSE()
            #MESSAGE("Win 32")
            SET_TARGET_PROPERTIES(${TARGET} PROPERTIES SUFFIX .mexw32 LINK_FLAGS /export:mexFunction)
        ENDIF()
    ELSEIF(APPLE)
        IF(CMAKE_SIZEOF_VOID_P MATCHES "8")
            #MESSAGE("Mac 64")
            SET_TARGET_PROPERTIES(${TARGET} PROPERTIES SUFFIX .mexmaci64)
        ELSE()
            #MESSAGE("Mac 32")
            SET_TARGET_PROPERTIES(${TARGET} PROPERTIES SUFFIX .mexmaci)
        ENDIF()
    ELSEIF(UNIX)
        IF(CMAKE_SIZEOF_VOID_P MATCHES "8")
            #MESSAGE("Linux 64")
            SET_TARGET_PROPERTIES(${TARGET} PROPERTIES SUFFIX .mexa64)
        ELSE()
            #MESSAGE("Linux 32")
            SET_TARGET_PROPERTIES(${TARGET} PROPERTIES SUFFIX .mexglx)
        ENDIF ()
    ENDIF()
ENDMACRO(MEXIFY)


MACRO(BUILD_INSTALL_ET_MEX MEX_NAME)
    ADD_LIBRARY(${MEX_NAME} MODULE _${MEX_NAME}.cpp)
    IF(USE_GPU)
        TARGET_LINK_LIBRARIES(${MEX_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} _et _et_array_interface ${NIFTY_REC_ET_LIBRARIES} ${NIFTY_REC_ET_LIBRARIES_GPU} ${NIFTY_REG_LIBRARIES} ${NIFTY_REC_ET_INTERF_LIBRARY} ${ZLIB} ${CUDA_LIBRARIES})
        CUDA_ADD_CUFFT_TO_TARGET(${MEX_NAME})
        CUDA_ADD_CUBLAS_TO_TARGET(${MEX_NAME})
    ELSE(USE_GPU)
        TARGET_LINK_LIBRARIES(${MEX_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} _et _et_array_interface ${NIFTY_REC_ET_LIBRARIES} ${NIFTY_REG_LIBRARIES} ${NIFTY_REC_ET_INTERF_LIBRARY} ${ZLIB})
    ENDIF(USE_GPU)
    MEXIFY(${MEX_NAME})
    INSTALL(TARGETS ${MEX_NAME} LIBRARY DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})
ENDMACRO(BUILD_INSTALL_ET_MEX)


MACRO(BUILD_INSTALL_TT_MEX MEX_NAME)
    ADD_LIBRARY(${MEX_NAME} MODULE _${MEX_NAME}.cpp)
    IF(NiftyRec_USE_CUDA)
        TARGET_LINK_LIBRARIES(${MEX_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} _tt _tt_array_interface ${NIFTY_REC_TT_LIBRARIES} ${NIFTY_REC_TT_LIBRARIES_GPU} ${NIFTY_REC_ET_LIBRARIES} ${NIFTY_REC_ET_LIBRARIES_GPU} ${NIFTY_REC_TT_INTERF_LIBRARY} ${NIFTY_REG_LIBRARIES} ${CUDA_LIBRARIES})
        CUDA_ADD_CUFFT_TO_TARGET(${MEX_NAME})
        CUDA_ADD_CUBLAS_TO_TARGET(${MEX_NAME})
    ELSE(NiftyRec_USE_CUDA)
        TARGET_LINK_LIBRARIES(${MEX_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} _tt _tt_array_interface ${NIFTY_REC_TT_LIBRARIES} ${NIFTY_REC_ET_LIBRARIES} ${NIFTY_REC_TT_INTERF_LIBRARY} ${NIFTY_REG_LIBRARIES})
    ENDIF(NiftyRec_USE_CUDA)
    MEXIFY(${MEX_NAME})
    INSTALL(TARGETS ${MEX_NAME} DESTINATION ${MEX_INSTALL_DIR_NIFTYREC})
ENDMACRO(BUILD_INSTALL_TT_MEX)

#-----------------------------------------------------------------------------

FOREACH(MEX_NAME ${NIFTY_REC_ET_MEX})
        BUILD_INSTALL_ET_MEX(${MEX_NAME} ${NiftyRec_USE_CUDA})
ENDFOREACH(MEX_NAME)

IF(NiftyRec_USE_CUDA)
    FOREACH(MEX_NAME ${NIFTY_REC_TT_MEX})
            BUILD_INSTALL_TT_MEX(${MEX_NAME} ${NiftyRec_USE_CUDA})
    ENDFOREACH(MEX_NAME)
ENDIF(NiftyRec_USE_CUDA)

#-----------------------------------------------------------------------------



